<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_random_name_pattern">Случайное имя: %1$s (%2$s)</string>
    <string name="text_name_item_pattern">%1$s (%2$s)</string>
    <string name="title_names_list">Список случайных имен:</string>
    <string name="title_dimmension_screen">Случайные имена</string>
    <string name="hint_search">Поиск по именам...</string>
    <string name="hint_first_name">Имя</string>
    <string name="hint_last_name">Фамилия</string>
    <string name="button_add_name">Добавить имя</string>
    <string name="button_refresh">Обновить</string>
    <string name="title_fetch_from_network">Загрузить из интернета</string>
    <string name="button_fetch_from_network">Загрузить имена из сети</string>
    <string name="text_network_success">Загружено %1$d имён из сети</string>
    <string name="text_network_error">Ошибка: %1$s</string>
</resources>


